--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "zendframework/zend-soap": "^2.6"
     },
     "autoload": {
         "psr-4": {
